create modals for characcters in /oiar.html fix up some navigations few other minor fixes

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,8 @@
-# ignore .vscode
-.vscode/
-
-# ignore skeletons / templates
+# ignore skeletons
 tma/000.html
 tmagp/000.html
-
+# ignore convinience snippets
+snippets/
 # unneeded
 less/themes.less
+js/theme.js
