--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,257 @@
 # ignore skeletons
-tma/000.html
-tmagp/000.html
+tma/mag/000.html
+tmagp/magp/000.html
 # ignore convinience snippets
 snippets/
 # unneeded
 less/themes.less
 js/theme.js
+# ignore tmagp episodes i havent done yet
+# season one
+tmagp/magp/001.html
+tmagp/magp/002.html
+tmagp/magp/003.html
+tmagp/magp/004.html
+tmagp/magp/005.html
+tmagp/magp/006.html
+tmagp/magp/007.html
+tmagp/magp/008.html
+tmagp/magp/009.html
+tmagp/magp/010.html
+tmagp/magp/011.html
+tmagp/magp/012.html
+tmagp/magp/013.html
+tmagp/magp/014.html
+tmagp/magp/015.html
+tmagp/magp/016.html
+tmagp/magp/017.html
+tmagp/magp/018.html
+tmagp/magp/019.html
+tmagp/magp/020.html
+# episodes that haven't come out yet
+tmagp/magp/021.html
+tmagp/magp/022.html
+tmagp/magp/023.html
+tmagp/magp/024.html
+tmagp/magp/025.html
+tmagp/magp/026.html
+tmagp/magp/027.html
+tmagp/magp/028.html
+tmagp/magp/029.html
+tmagp/magp/030.html
+tmagp/magp/031.html
+tmagp/magp/032.html
+tmagp/magp/033.html
+tmagp/magp/034.html
+tmagp/magp/035.html
+tmagp/magp/036.html
+tmagp/magp/037.html
+tmagp/magp/038.html
+tmagp/magp/039.html
+tmagp/magp/040.html
+# ignore tma episodes i havent done yet
+# season one
+tma/mag/001.html
+tma/mag/002.html
+tma/mag/003.html
+tma/mag/004.html
+tma/mag/005.html
+tma/mag/006.html
+tma/mag/007.html
+tma/mag/008.html
+tma/mag/009.html
+tma/mag/010.html
+tma/mag/011.html
+tma/mag/012.html
+tma/mag/013.html
+tma/mag/014.html
+tma/mag/015.html
+tma/mag/016.html
+tma/mag/017.html
+tma/mag/018.html
+tma/mag/019.html
+tma/mag/020.html
+tma/mag/021.html
+tma/mag/022.html
+tma/mag/023.html
+tma/mag/024.html
+tma/mag/025.html
+tma/mag/026.html
+tma/mag/027.html
+tma/mag/028.html
+tma/mag/029.html
+tma/mag/030.html
+tma/mag/031.html
+tma/mag/032.html
+tma/mag/033.html
+tma/mag/034.html
+tma/mag/035.html
+tma/mag/036.html
+tma/mag/037.html
+tma/mag/038.html
+tma/mag/039.html
+tma/mag/040.html
+# season two
+tma/mag/041.html
+tma/mag/042.html
+tma/mag/043.html
+tma/mag/044.html
+tma/mag/045.html
+tma/mag/046.html
+tma/mag/047.html
+tma/mag/048.html
+tma/mag/049.html
+tma/mag/050.html
+tma/mag/051.html
+tma/mag/052.html
+tma/mag/053.html
+tma/mag/054.html
+tma/mag/055.html
+tma/mag/056.html
+tma/mag/057.html
+tma/mag/058.html
+tma/mag/059.html
+tma/mag/060.html
+tma/mag/061.html
+tma/mag/062.html
+tma/mag/063.html
+tma/mag/064.html
+tma/mag/065.html
+tma/mag/066.html
+tma/mag/067.html
+tma/mag/068.html
+tma/mag/069.html
+tma/mag/070.html
+tma/mag/071.html
+tma/mag/072.html
+tma/mag/073.html
+tma/mag/074.html
+tma/mag/075.html
+tma/mag/076.html
+tma/mag/077.html
+tma/mag/078.html
+tma/mag/079.html
+tma/mag/080.html
+# season three
+tma/mag/081.html
+tma/mag/082.html
+tma/mag/083.html
+tma/mag/084.html
+tma/mag/085.html
+tma/mag/086.html
+tma/mag/087.html
+tma/mag/088.html
+tma/mag/089.html
+tma/mag/090.html
+tma/mag/091.html
+tma/mag/092.html
+tma/mag/093.html
+tma/mag/094.html
+tma/mag/095.html
+tma/mag/096.html
+tma/mag/097.html
+tma/mag/098.html
+tma/mag/099.html
+tma/mag/100.html
+tma/mag/101.html
+tma/mag/102.html
+tma/mag/103.html
+tma/mag/104.html
+tma/mag/105.html
+tma/mag/106.html
+tma/mag/107.html
+tma/mag/109.html
+tma/mag/108.html
+tma/mag/110.html
+tma/mag/111.html
+tma/mag/112.html
+tma/mag/113.html
+tma/mag/114.html
+tma/mag/115.html
+tma/mag/116.html
+tma/mag/117.html
+tma/mag/118.html
+tma/mag/119.html
+tma/mag/120.html
+# season four
+tma/mag/121.html
+tma/mag/122.html
+tma/mag/123.html
+tma/mag/124.html
+tma/mag/125.html
+tma/mag/126.html
+tma/mag/127.html
+tma/mag/128.html
+tma/mag/129.html
+tma/mag/130.html
+tma/mag/131.html
+tma/mag/132.html
+tma/mag/133.html
+tma/mag/134.html
+tma/mag/135.html
+tma/mag/136.html
+tma/mag/137.html
+tma/mag/138.html
+tma/mag/139.html
+tma/mag/140.html
+tma/mag/141.html
+tma/mag/142.html
+tma/mag/143.html
+tma/mag/144.html
+tma/mag/145.html
+tma/mag/146.html
+tma/mag/147.html
+tma/mag/148.html
+tma/mag/149.html
+tma/mag/150.html
+tma/mag/151.html
+tma/mag/152.html
+tma/mag/153.html
+tma/mag/154.html
+tma/mag/155.html
+tma/mag/156.html
+tma/mag/157.html
+tma/mag/158.html
+tma/mag/159.html
+tma/mag/160.html
+# season five
+tma/mag/161.html
+tma/mag/162.html
+tma/mag/163.html
+tma/mag/164.html
+tma/mag/165.html
+tma/mag/166.html
+tma/mag/167.html
+tma/mag/168.html
+tma/mag/169.html
+tma/mag/170.html
+tma/mag/171.html
+tma/mag/172.html
+tma/mag/173.html
+tma/mag/174.html
+tma/mag/175.html
+tma/mag/176.html
+tma/mag/177.html
+tma/mag/178.html
+tma/mag/179.html
+tma/mag/180.html
+tma/mag/181.html
+tma/mag/182.html
+tma/mag/183.html
+tma/mag/184.html
+tma/mag/185.html
+tma/mag/186.html
+tma/mag/187.html
+tma/mag/188.html
+tma/mag/189.html
+tma/mag/190.html
+tma/mag/191.html
+tma/mag/192.html
+tma/mag/193.html
+tma/mag/194.html
+tma/mag/195.html
+tma/mag/196.html
+tma/mag/197.html
+tma/mag/198.html
+tma/mag/199.html
+tma/mag/200.html
